@@ -146,6 +146,9 @@ Print sizes in human readable form.
 .\"\fB\-u\fR, \fB\-\-show\-uri\fR
 .\"Show complete S3 URI in listings.
 .TP
+\fB\-\-progress\fR, \fB\-\-no\-progress\fR
+Display or don't display progress meter. When running on TTY (e.g. console or xterm) the default is to display progress meter. If not on TTY (e.g. output is redirected somewhere or running from cron) the default is to not display progress meter.
+.TP
 \fB\-v\fR, \fB\-\-verbose\fR
 Enable verbose output.
 .TP
